k8s/apps/common/mock-ws-backend/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    name: backend
    istio-injection: enabled
