k8s/apps/common/mock-ws-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: backend
spec:
    selector:
        app: backend    
    type: ClusterIP
    ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
    - name: http-envoy
      port: 15090
      targetPort: 15090
      protocol: TCP
